<resources>
    <string name="app_name">青春纪念册</string>
    <string name="network_service_create">网络服务创建</string>
    <string name="network_service_destory">网络服务销毁</string>
    <string name="str_userlogin">登 录</string>
    <string name="loginerror">登录错误</string>
    <string name="author">创作者\n服务端：绪\n应用端：坤</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_str_share">分享</string>
    <string name="toolbar_subtitle">副标题</string>
    <string name="main_page_str">鸡汤补充</string>
    <string name="text_id_length">学号长度为12位</string>
    <string name="text_password_length">密码长度限制为6~10位</string>
    <string name="student_id">学号</string>
    <string name="welcome_my_classmate">Welcome My Classmate!</string>
    <string name="confirm_modify">确认修改</string>
    <string name="obtian_currentuser_failed">获取当前用户失败</string>
    <string name="today">今天</string>
    <string name="str_1">距离我们毕业时\n已经过去了：</string>
    <string name="str_2">今天你还好吗？\n老同学\n加油</string>
    <string name="str_3">已阅</string>
    <string name="modify_header_photo">更换头像</string>
    <string name="local_photo">本地相册</string>
    <string name="photograph">拍照</string>
    <string name="cancel">取消</string>

</resources>