<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_header_photo"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_photo"
        android:gravity="center"
        android:id="@+id/local_button"
        android:textSize="18sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_cutting_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photograph"
        android:gravity="center"
        android:id="@+id/photograph_button"

        android:textSize="18sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_cutting_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_button"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="18sp"/>

</LinearLayout>