<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textSize="30sp"
        android:textColor="#D4CDCE"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/str_1"
        android:textStyle="bold"
        android:textColor="#CAC1C2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/distance_time"
        android:textSize="27sp"
        android:textColor="#E5E4EF"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_2"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#CAC1C2"/>


</LinearLayout>